# workshop_data_quality

./: pyproject.toml
.github/workflows/: CI.yml
docs/: index.md
