[project]
name = "workshop-data-quality"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Pallisser de Oliveira",email = "rafaelpallisser@gmail.com"}
]
readme = "README.md"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "mkdocs-material (>=9.6.4,<10.0.0)",
    "mkdocstrings[python] (>=0.28.1,<0.29.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"